Make sure U+20 collapse properly as in Jiya and hanging

--- a/src/sass/inline/_jiya.sass
+++ b/src/sass/inline/_jiya.sass
@@ -8,9 +8,10 @@ h-cs[hidden]
   // box
   display: none
   visibility: hidden
-  // typo
+  // typography
   font: .825em Courier
   letter-spacing: 0
+  white-space: normal
 
 // * Handle line start/end Biaodian (行首行尾標點擠壓)
 // *
